# AgenticAI-Autonomous-Purchase-Requisition-Agent

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml
agents/: __init__.py  approval_agent.py  base_agent.py  interpreter_agent.py  optimizer_agent.py  policy_agent.py  supplier_agent.py
config/: logging_config.py  mcp_config.py  settings.py
data/policies/: approval_thresholds.md  procurement_policy.md  supplier_selection_guidelines.md
docs/: agent_roles.md  architecture.md  mcp_servers.md
graph/: __init__.py  edges.py  nodes.py  state.py  workflow.py
mcp_servers/: __init__.py
mcp_servers/approval/: __init__.py  client.py  server.py
mcp_servers/budget/: __init__.py  client.py  server.py
mcp_servers/erp/: __init__.py  client.py  server.py
mcp_servers/policy/: __init__.py  client.py  server.py
mcp_servers/supplier/: __init__.py  client.py  mock_vendor_api.py  providers.py  server.py
models/: policy.py  purchase_order.py  requisition.py  supplier.py
scripts/: run_agent.py  start_mcp_servers.sh  start_mock_vendor_api.py
tests/: conftest.py
tests/integration/: test_mcp_servers.py  test_workflow.py
tests/unit/: test_agents.py  test_models.py  test_tools.py
tools/: email_sender.py  llm_client.py  po_generator.py  rag_retriever.py  slack_notifier.py  synthetic_suppliers.py
ui/: __init__.py  app.py  components.py  session_state.py
