[project]
name = "purchase-requisition-agent"
version = "0.1.0"
description = "Autonomous Purchase Requisition Agent demo using MCP concepts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.45.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
